<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/weightLabelText"
                android:id="@+id/weightBox" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weightBox"
                android:layout_weight="1"
                android:editable="true"
                android:background="#ff8687ff" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/heightLabelText"
                android:id="@+id/heightBox" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heightBox"
                android:layout_weight="1"
                android:editable="true"
                android:background="#ff8687ff" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthControlCheckText"
                android:id="@+id/birthControlCheck"
                android:layout_marginTop="80dp"
                android:checked="false"
                android:layout_below="@+id/ageCheck4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smokeCheckText"
                android:id="@+id/smokeCheck"
                android:checked="false"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/pregnantCheck"
                android:layout_alignParentLeft="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculateButtonText"
                android:id="@+id/calculateButton"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/birthControlCheck"
                android:layout_alignEnd="@+id/birthControlCheck" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregnantCheckText"
                android:id="@+id/pregnantCheck"
                android:layout_alignParentStart="true"
                android:checked="false"
                android:layout_below="@+id/birthControlCheck"
                android:layout_alignParentLeft="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageCheck4Text"
                android:id="@+id/ageCheck4"
                android:checked="false"
                android:layout_toEndOf="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageCheck3Text"
                android:id="@+id/ageCheck3"
                android:layout_above="@+id/birthControlCheck"
                android:layout_toRightOf="@+id/pregnantCheck"
                android:layout_toEndOf="@+id/pregnantCheck"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageCheck2Text"
                android:id="@+id/ageCheck2"
                android:layout_toEndOf="@+id/ageCheck4"
                android:layout_below="@+id/ageCheck3"
                android:layout_alignParentLeft="true"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageCheck1Text"
                android:id="@+id/ageCheck1"
                android:layout_toEndOf="@+id/ageCheck2"
                android:checked="false"
                android:layout_below="@+id/ageCheck3"
                android:layout_alignLeft="@+id/ageCheck3"
                android:layout_alignStart="@+id/ageCheck3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ageBoxText"
                android:id="@+id/textView3"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/intakeLabelText"
                android:id="@+id/textView4"
                android:layout_below="@+id/smokeCheck"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/intakeTimeLabelText"
                android:id="@+id/textView6"
                android:layout_below="@+id/textView4" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/intakeBox"
                android:layout_toEndOf="@+id/textView6"
                android:layout_alignTop="@+id/textView4"
                android:editable="true"
                android:background="#ff7979ff"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/textView6" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeSinceBox"
                android:layout_below="@+id/textView4"
                android:layout_alignLeft="@+id/intakeBox"
                android:layout_alignStart="@+id/intakeBox"
                android:layout_alignRight="@+id/intakeBox"
                android:layout_alignEnd="@+id/intakeBox"
                android:editable="true"
                android:background="#ff7979ff" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
